# testQt

./: CMakeLists.txt
src/: dialogfirsttask.cpp  dialogfirsttask.h  dialogfirsttask.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/firstTask/: dialogfirsttask.cpp  dialogfirsttask.ui  firstTask.cpp  firstTask.h  ireceiver.h
src/secondTask/: iview.h  secondtaskdialog.cpp  secondtaskdialog.h  secondtaskdialog.ui
src/secondTask/controller/: controller.cpp  controller.h
src/secondTask/model/: Model.cpp  Model.h  field.h  row.cpp  row.h
src/secondTask/view/: iview.cpp  iview.h  view.h
